--- a/src/WeatherIcon.css
+++ b/src/WeatherIcon.css
@@ -1,9 +1,5 @@
 .WeatherIcon{
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: relative;
     overflow: hidden;
     pointer-events: none;
 }
