--- a/src/App.css
+++ b/src/App.css
@@ -23,12 +23,19 @@
     
 }
 
-li button {
+li a {
     background-color: rgba(255, 255, 255, 0);
     display: flex;
     justify-content: center;
-    font-family: 'poppins';
-    width: 50%
+    font-family: 'Poppins', 'Segoe-UI', 'Ubuntu', sans-serif;
+    cursor: pointer;
+    padding-left: 5px;
+    padding-right: 5px;
+    text-decoration: none;
+    color: black;
+}
+li a.active{
+    text-decoration: underline;
 }
 .status {
     background-color: aqua;
