--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,15 @@ body {
   background-color: #1f1d36;
   color: #e9a6a6;
 }
+
+.navbar {
+  color: #e9a6a6;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 25px;
+}
+
+.navbar span {
+  color: #e9a6a6;
+}
