Feat: Layout adjustment and weather link design fades out & in

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@ body {
 }
 
 .navbar {
+  background-color: #3f3351;
   color: #e9a6a6;
   display: flex;
   align-items: center;
@@ -22,6 +23,24 @@ body {
   padding: 25px;
 }
 
+.navbar-main span {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
 span a {
   color: #e9a6a6;
+}
+
+.weather {
+  transition: 0.5s;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-radius: 50px;
+}
+
+.weather:hover {
+  background-color: #864879;
 }
