--- a/src/App.css
+++ b/src/App.css
@@ -43,10 +43,9 @@ body {
 }
 
 .intro-wrapper {
-  padding-top: 20px;
-  padding-right: 10px;
-  padding-left: 10px;
+  padding: 20px;
   display: grid;
   grid-template-columns: 2fr 2fr;
   color: #e9a6a6;
+  place-items: center;
 }
